--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,25 @@
-<% if user_signed_in? %>
-  <li>
-    <%= link_to '投稿フォーム', new_book_path %>
-  </li>  <li>
-    <%= link_to "ログアウト", destroy_member_session_path, method: :delete %>
-  </li>
-<% else %>
-  <li>
-    <%= link_to "新規登録", new_member_registration_path %>
-  </li>
-  <li>
-    <%= link_to "ログイン", new_member_session_path %>
-  </li>
-<% end %>
+<header style="background-color: #F5A9A9;">
+  <div class="container-fluid">
+    <div class="row mx-auto">
+      <div class="col-6">
+        <ul class="row justify-content-end my-2 list-unstyled">
+          <% if member_signed_in? %>
+            <li class="nav-item mx-2 mt-2">
+              <%= link_to '投稿フォーム', new_book_path %>
+            </li>  
+            <li class="nav-item mx-2 mt-2">
+              <%= link_to "ログアウト", destroy_member_session_path, method: :delete %>
+            </li>
+          <% else %>
+            <li class="nav-item mx-2 mt-2">
+              <%= link_to "新規登録", new_member_registration_path %>
+            </li>
+            <li class="nav-item mx-2 mt-2">
+              <%= link_to "ログイン", new_member_session_path %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
