--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,85 @@
-<h2>Sign up</h2>
+<div class="container p-3">
+  <div class="row">
+    <%= render "public/shared/error_messages", resource: resource %>
+    <div class="col-12">
+      <h3 class="mt-3 mb-3">初めてご利用の方</h3>
+        <p class="mb-5">こちらから会員登録を行ってください。</p>
+    </div>
+    <%= form_with model: @member, url: member_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+    <div class="py-4 mx-auto w-100 px-2">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+      <div class="row">
+        <div class="col-12 col-md-4 text-right-more-than-md">
+          氏名<span class="text-muted necessary-field p-1 px-2 ml-2 small rounded">必須</span>
+        </div>
+        <div class="col-12 col-md-4">
+            <%= f.text_field :last_name, autofocus: true, placeholder:"絵本", class: "form-control mt-1" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="col-12 col-md-4">
+          <%= f.text_field :first_name, placeholder:"桃太郎", class: "form-control mt-1" %>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-md-4 mt-3 text-right-more-than-md">
+          ニックネーム<span class="text-muted necessary-field p-1 px-2 ml-2 small rounded">必須</span>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <%= f.text_field :nickname, placeholder:"ニックネーム", class: "form-control mt-1" %>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-md-4 mt-3 text-right-more-than-md">
+          メールアドレス<span class="text-muted necessary-field p-1 px-2 ml-2 small rounded">必須</span>
+        </div>
+        <div class="col-12 col-md-4">
+          <%= f.text_field :email, placeholder: "sample@example.com", class: "w-100 form-control mt-1" %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-md-4 mt-3 text-right-more-than-md">
+
+          <div class="flex-more-than-md">
+            <div>
+              パスワード<% if @minimum_password_length %><span class="text-muted necessary-field p-1 px-2 ml-2 small rounded">必須</span>
+              <br><span class="small">(<%= @minimum_password_length %> 文字以上)</span>
+              <% end %>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-12 col-md-4 space-more-than-md">
+            <%= f.password_field :password, class: "form-control mt-1" %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-md-4 mt-3 text-right-more-than-md">
+          パスワード<span class="text-muted necessary-field p-1 px-2 ml-2 small rounded">必須</span>
+          <br><span class="small">(確認用)</span>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <%= f.password_field :password_confirmation, class: "form-control mt-1" %>
+        </div>
+      </div>
+      <div>
+        <%= f.submit "新規登録", class:"btn btn-dark px-3 mt-4" %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="col-12">
+      <h4 class="mt-5">既に登録済みのお客様</h4>
+      <div>
+        <%= link_to "こちら", new_member_session_path, class: "text-muted rounded-pill necessary-field px-4 mb-5", 'data-turbolinks': false %>からログインを行ってください。
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
