--- a/app/views/public/books/new.html.erb
+++ b/app/views/public/books/new.html.erb
@@ -1,10 +1,9 @@
-<h2>絵本新規投稿</h2>
-<%= form_with model: @book do |f| %>
-  <h3>画像</h3>
-  <%= f.file_field :image, accept: "image/*" %>
-  <h3>タイトル</h3>
-  <%= f.text_field :name %>
-  <h3>あらすじ</h3>
-  <%= f.text_area :description %>
-  <%= f.submit '投稿' %>
-<% end %>
+<div class="container py-5">
+  <div class="row mt-3 mb-3 offset-1 text-center">
+    <h3 class="px-4 title-background">絵本新規登録</h3>
+  </div>
+  <div class="row justify-content-center">
+    <%= render 'layouts/error', obj: @book %>
+  </div>
+  <%= render 'form', book: @book %>
+</div>
