--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Books#index</h1>
-<p>Find me in app/views/admin/books/index.html.erb</p>
+<div class="container p-3">
+  <div class="row">
+    <div class="col-10">
+      <div class="row">
+        <h3>商品一覧</h3>
+        
+      </div>
+      <div class="d-flex flex-wrap">
+        <% @books.each do |book| %>
+          <div class="mx-2 mb-4">
+            <%= link_to book_path(book.id) do %>
+              <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
+            <% end %>
+            <p><%= book.name %></p>
+            <p><%= book.description %></p>
+          </div>
+        <% end %>
+      </div>
+      <%= paginate @books %>
+    </div>
+  </div>
+</div>
