--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Categories#index</h1>
-<p>Find me in app/views/admin/categories/index.html.erb</p>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-11 py-5 mx-auto">
+
+      <h3>カテゴリ一覧・追加</h3>
+
+      <!--バリデーション部分-->
+      <%= render 'layouts/error', obj: @category %>
+
+      <!--form部分-->
+      <%=form_with model: @category,url: admin_categories_path, method: :post do |f| %>
+        <td><%= f.label :"カテゴリ名", class: "mr-3" %></td>
+        <td><%= f.text_field :name, class: "mr-5" %></td>
+        <td><%= f.submit'新規登録',class: "btn btn-dark" %></td>
+      <% end %>
+
+      <!--ジャンル一覧-->
+      <table class="table table-borderless">
+        <div class="py-3">
+          <thead>
+            <tr>
+              <th>カテゴリ名</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @categories.each do |category| %>
+            <tr>
+              <td><%= category.name %></td>
+              <td><%= link_to "編集する", edit_admin_category_path(category.id), class: "btn btn-sm btn-dark" %></td>
+            </tr>
+          <%end%>
+          </tbody>
+        </div>
+      </table>
+    </div>
+  </div>
+</div>
