--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,38 @@
           <% if member_signed_in? %>
             <li class="nav-item mx-2 mt-2">
               <%= link_to '投稿フォーム', new_book_path %>
-            </li>  
+            </li>
+
             <li class="nav-item mx-2 mt-2">
               <%= link_to "ログアウト", destroy_member_session_path, method: :delete %>
             </li>
+
+          <% elsif admin_signed_in? %>
+            <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-cake-candles"></i>
+              <%= link_to "絵本一覧", admin_books_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+            </li>
+
+            <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-users"></i>
+              <%= link_to "会員一覧", admin_members_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+            </li>
+
+            <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-cookie-bite"></i>
+              <%= link_to "カテゴリ一覧", admin_categories_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+            </li>
+
+            <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-right-from-bracket"></i>
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+            </li>
+
           <% else %>
             <li class="nav-item mx-2 mt-2">
               <%= link_to "新規登録", new_member_registration_path %>
             </li>
+
             <li class="nav-item mx-2 mt-2">
               <%= link_to "ログイン", new_member_session_path %>
             </li>
