--- a/app/views/public/books/_form.html.erb
+++ b/app/views/public/books/_form.html.erb
@@ -7,17 +7,17 @@
       <td></td>
     </tr>
     <tr>
-      <td><%= f.label :商品名 %></td>
+      <td><%= f.label :絵本のタイトル %></td>
       <td><%= f.text_field :name, placeholder: "商品名", class: "form-control" %></td>
       <td></td>
     </tr>
     <tr>
-      <td><%= f.label :商品説明 %></td>
+      <td><%= f.label :あらすじ %></td>
       <td><%= f.text_area :description, placeholder: "ここに説明文を記述します", class: "form-control", rows: 5 %></td>
       <td></td>
     </tr>
     <tr>
-      <td><%= f.label :ジャンル %></td>
+      <td><%= f.label :カテゴリ %></td>
       <td><%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "--選択してください--", class: "form-control" %></td>
       <td></td>
     </tr>
@@ -25,7 +25,7 @@
   </table>
   <div class="actions text-center">
   <% if book.new_record? %>
-    <%= f.submit '新規登録', class: "btn btn-dark px-4" %>
+    <%= f.submit '絵本新規登録', class: "btn btn-dark px-4" %>
   <% else %>
   　<%= f.submit '変更を保存', class: "btn btn-dark px-4" %>
   <% end %>
