--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -2,8 +2,13 @@
   <div class="row">
     <div class="col-10">
       <div class="row">
-        <h3>商品一覧</h3>
-        
+        <h3>絵本一覧</h3>
+          <div class="row justify-content-end mb-3">
+            <div class="col-2">
+              <%= link_to '+', new_admin_book_path, class: "title-background btn rounded-circle border-right border-bottom shadow btn-dark" %>
+            </div>
+          </div>
+
       </div>
       <div class="d-flex flex-wrap">
         <% @books.each do |book| %>
