--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,17 @@
         <ul class="row justify-content-end my-2 list-unstyled">
           <% if member_signed_in? %>
             <li class="nav-item mx-2 mt-2">
+              <i class="fa-regular fa-user"></i>
+              <%= link_to "マイページ", members_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+            </li>
+
+            <li class="nav-item mx-2 mt-2">
               <%= link_to '投稿フォーム', new_book_path %>
+            </li>
+
+            <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-cake-candles"></i>
+              <%= link_to "絵本一覧", books_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
             <li class="nav-item mx-2 mt-2">
@@ -13,6 +23,7 @@
             </li>
 
           <% elsif admin_signed_in? %>
+
             <li class="nav-item mx-2 mt-2">
               <i class="fa-solid fa-cake-candles"></i>
               <%= link_to "絵本一覧", admin_books_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
