--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Books#show</h1>
-<p>Find me in app/views/public/books/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-3'>
+
+    </div>
+    <div class='col-md-8 offset-md-1'>
+  		<h2>絵本の詳細</h2>
+
+    		<table class='table'>
+    		  <tr>
+    		    <%= image_tag @book.get_book_image(450, 300), style: "object-fit: cover; width: 450px; height: 300px;" %>
+            <td><%= @book.name %></td>
+            <td><%= @book.description %></td>
+            <td><%= Category.find(@book.category_id).name %></td>
+          </tr>
+        </table>
+
+         </div>
+        <table>
+          <tbody>
+
+          </tbody>
+        </table>
+
+    </div>
+  </div>
+</div>
