[Add] 会員情報編集機能

--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Members#edit</h1>
-<p>Find me in app/views/admin/members/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3 class="my-5">会員情報編集</h3>
+
+      <%= form_with model:@member, url: update_member_path do |f| %>
+      <%= render 'layouts/error', obj: @member %>
+        <table class="table table-borderless">
+          <tr>
+            <td>氏名</td>
+            <td><%= f.text_field :last_name, autofocus: true %>&ensp;<%= f.text_field :first_name %></td>
+          </tr>
+
+          <tr>
+            <td>ニックネーム</td>
+            <td><%= f.text_field :nickname %>
+          </tr>
+
+          <tr>
+            <td>メールアドレス</td>
+            <td><%= f.text_field :email %></td>
+            <td></td>
+          </tr>
+
+          <tr>
+            <td></td>
+            <td><%= f.submit "編集内容を保存", class:"btn btn-dark" %>&ensp;<%= link_to "退会する", members_confirm_path, class:"btn btn-danger" %></td>
+          </tr>
+      </table>
+      <% end %>
+    </div>
+  </div>
+</div>
