--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
           <% if member_signed_in? %>
             <li class="nav-item mx-2 mt-2">
               <i class="fa-regular fa-user"></i>
-              <%= link_to "マイページ", members_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
+              <%= link_to "マイページ", member_path(id: current_member.id), class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
             <li class="nav-item mx-2 mt-2">
