--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -24,7 +24,7 @@
 
           <tr>
             <td></td>
-            <td><%= f.submit "編集内容を保存", class:"btn btn-dark" %>&ensp;<%= link_to "退会する", members_confirm_path, class:"btn btn-danger" %></td>
+            <td><%= f.submit "編集内容を保存", class:"btn btn-dark" %>&ensp;<%= link_to "退会する", confirm_member_path(@member), class:"btn btn-danger" %></td>
           </tr>
       </table>
       <% end %>
