--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -13,7 +13,7 @@
       <div class="d-flex flex-wrap">
         <% @books.each do |book| %>
           <div class="mx-2 mb-4">
-            <%= link_to book_path(book.id) do %>
+            <%= link_to admin_book_path(book.id) do %>
               <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
             <% end %>
             <p><%= book.name %></p>
