--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Books#show</h1>
-<p>Find me in app/views/admin/books/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-3'>
+
+    </div>
+    <div class='col-md-8 offset-md-1'>
+  		<h2>絵本の詳細</h2>
+
+    		<table class='table'>
+    		  <tr>
+    		    <%= image_tag @book.get_book_image(450, 300), style: "object-fit: cover; width: 450px; height: 300px;" %>
+            <td><%= @book.name %></td>
+            <td><%= @book.description %></td>
+            <td><%= Category.find(@book.category_id).name %></td>
+          </tr>
+        </table>
+
+    <div class="row justify-content-center">
+      <%= link_to '編集する', edit_admin_book_path(book.id), class: "btn btn-dark px-4" %>
+    </div>
+  </div>
+</div>
