--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -27,7 +27,10 @@
           <% @categories.each do |category| %>
             <tr>
               <td><%= category.name %></td>
-              <td><%= link_to "編集する", edit_admin_category_path(category.id), class: "btn btn-sm btn-dark" %></td>
+              <td>
+                <%= link_to "編集する", edit_admin_category_path(category.id), class: "btn btn-sm btn-dark" %>
+                <%= link_to '削除', admin_category_path(category), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger" %>
+              </td>
             </tr>
           <%end%>
           </tbody>
