[Add] お気に入り機能

--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -18,6 +18,7 @@
                 <% end %>
               </ul>
             </td>
+            <td><%= render'public/favorites/favorite', book: @book %></td>
           </tr>
         </table>
 
