--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container pt-5 pb-5">
   <div class="row">
-    <%= render "public/books/category", category: @categories %>
+    <%= render "public/books/category", categories: @categories %>
       <div class="col-10">
         <div class="main-visual-cover mx-auto">
           <div class="main-visual">
