--- a/app/views/public/books/_category.html.erb
+++ b/app/views/public/books/_category.html.erb
@@ -2,15 +2,15 @@
   <div class="text-center">
     <h3 class="mt-3">
       <p style="font-size:20px;">カテゴリ検索</p>
-      </h3>
+    </h3>
   </div>
   <div class="text-center">
-  <%= form_with url: category_search_path, method: :get do |f| %>
-    <% category.each do |category| %>
-      <ul class="px-3 py-2 text-center m-0" style="list-style: none;">
-         <li class="mb-1"><strong><%= link_to category.name, category_search_path(category_id: category.id), method: :get , class: "text-reset" %></strong></li>
-       </ul>
+    <%= form_with url: category_search_path, method: :get do |f| %>
+      <% @categories.each do |category| %>
+        <ul class="px-3 py-2 text-center m-0" style="list-style: none;">
+          <li class="mb-1"><strong><%= link_to category.name, category_search_path(category_id: category.id), method: :get , class: "text-reset" %></strong></li>
+        </ul>
+      <% end %>
     <% end %>
-  <% end %>
   </div>
 </div>
