--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -14,6 +14,7 @@
             <% end %>
             <p><%= book.name %></p>
             <p><%= book.description %></p>
+            <p><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></p>
           </div>
         <% end %>
       </div>
