--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -19,21 +19,16 @@
               </ul>
             </td>
             <td><%= render'public/favorites/favorite', book: @book %></td>
-            <td>
-              <p>コメント件数：<%= @book.post_comments.count %></p>
-              <% @book.post_comments.each do |post_comment| %>
-                <%= post_comment.member.nickname %>
-                <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-              <% end %>
-            </td>
           </tr>
         </table>
-      <div>
-        <%= form_with model: [@book, @post_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      </div>
+        <p>コメント件数：<span id="comment_count"><%= @book.post_comments.count %></span></p>
+        <div id="comment_index">
+          <%= render "public/post_comments/index", book: @book %>
+        </div>
+
+        <div id="comment-form">
+          <%= render "public/post_comments/form", book: @book, post_comment: @post_comment %>
+        </div>
     </div>
   </div>
 </div>
