--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container p-3">
   <div class="row">
     <div class="col-md-3">
       <h4 class="my-5">マイページ</h4>
@@ -6,23 +6,42 @@
           <h3><b>登録情報</b></h3>
           <%= link_to "編集する", edit_member_path, class:"btn btn-dark ml-3" %>
         </div>
-          <table class="table table-bordered">
-            <tr>
-              <td class="bg-light">氏名</td>
-              <td><%= @member.last_name + @member.first_name %></td>
-            </tr>
+        <table class="table table-bordered">
+          <tr>
+            <td class="bg-light">氏名</td>
+            <td><%= @member.last_name + @member.first_name %></td>
+          </tr>
 
-            <tr>
-              <td class="bg-light">ニックネーム</td>
-              <td><%= @member.nickname %></td>
-            </tr>
+          <tr>
+            <td class="bg-light">ニックネーム</td>
+            <td><%= @member.nickname %></td>
+          </tr>
 
-            <tr>
-              <td class="bg-light">メールアドレス</td>
-              <td><%= @member.email %></td>
-            </tr>
-          </table>
-
-    </div>
+          <tr>
+            <td class="bg-light">メールアドレス</td>
+            <td><%= @member.email %></td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-9">
+        <div class="row">
+          <h3 class="my-5">お気に入り登録をしている絵本</h3>
+        </div>
+        <div class="d-flex flex-wrap">
+            <% if @favorite_books.present? %>
+              <% @favorite_books.each do |book| %>
+                <div class="mx-2 mb-4">
+                  <%= link_to book_path(book.id) do %>
+                    <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
+                  <% end %>
+                  <p><%= book.name %></p>
+                </div>
+              <% end %>
+            <% else %>
+              <p>お気に入り登録している絵本はありません。</p>
+            <% end %>
+        </div>
+          <%= paginate @books %>
+      </div>
   </div>
 </div>
