--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,4 +1,8 @@
-<%= form_with model: [book, post_comment], local: false do |f| %>
-  <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに", class: "w-100", id: "comment_textarea" %>
-  <%= f.submit "送信" %>
+<% if member_signed_in? %>
+  <%= form_with model: [book, post_comment], local: false do |f| %>
+    <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに", class: "w-100", id: "comment_textarea" %>
+    <%= f.submit "送信" %>
+  <% end %>
+<% else %>
+  <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
 <% end %>
