--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,11 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5">会員情報編集</h3>
-
-      <%= form_with model:@member, url: update_member_path do |f| %>
+      <h3 class="my-5"><%= "#{ @member.last_name }#{ @member.first_name }さんの会員情報編集" %></h3>
       <%= render 'layouts/error', obj: @member %>
+      <%= form_with model:@member, url: admin_member_path do |f| %>
+
         <table class="table table-borderless">
+          <tr>
+            <td>会員ID</td>
+            <td><%= @member.id %></td> <!--@memberはform_withで指定されてないからインスタンス変数のまま-->
+          </tr>
           <tr>
             <td>氏名</td>
             <td><%= f.text_field :last_name, autofocus: true %>&ensp;<%= f.text_field :first_name %></td>
@@ -21,10 +25,17 @@
             <td><%= f.text_field :email %></td>
             <td></td>
           </tr>
-
           <tr>
-            <td></td>
-            <td><%= f.submit "編集内容を保存", class:"btn btn-dark" %>&ensp;<%= link_to "退会する", members_confirm_path, class:"btn btn-danger" %></td>
+              <td>会員ステータス</td>
+              <td>
+                <%= f.radio_button :is_active, false %>
+                <%= f.label :is_active_false, "退会" %>
+                <%= f.radio_button :is_active, true %>
+                <%= f.label :is_active_true, "有効" %>
+              </td>
+            </tr>
+          <tr>
+            <td><%= f.submit "変更を保存",class: "btn btn-dark" %></td>
           </tr>
       </table>
       <% end %>
