--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Admin::Members#index</h1>
-<p>Find me in app/views/admin/members/index.html.erb</p>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-11 mx-auto">
+      <h3>会員一覧</h3>
+
+      <table class="table table-bordered">
+        <div class="py-3">
+          <thead>
+            <tr>
+              <th>会員ID</th>
+              <th>氏名</th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+
+          <tbody>
+          <% @members.each do |member| %>
+            <tr>
+              <td>
+                <%= member.id %>
+              </td>
+              <td>
+                <u><%= link_to "#{member.last_name}#{member.first_name}", admin_member_path(member),  class: "text-reset" %></u>
+              </td>
+              <td>
+                <%= member.email %>
+              </td>
+              <td>
+                <% if member.is_active == false %>
+                  <p class="text-secondary">退会</p>
+                <% else %>
+                  <p class="text-success">有効</p>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+          </tbody>
+        </div>
+      </table>
+    </div>
+  </div>
+  <%= paginate @members %>
+</div>
