--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,6 +62,10 @@
             <li class="nav-item mx-2 mt-2">
               <%= link_to "ログイン", new_member_session_path %>
             </li>
+            <li class="nav-item mx-2 mt-2">
+              <%= link_to 'ゲストログイン', members_guest_sign_in_path, method: :post %>
+            </li>
+            
           <% end %>
         </ul>
       <%= render 'layouts/search' %>
