--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -10,7 +10,7 @@
             <p>口コミ＆コミュニティサイトです。</p>
           </div>
         </div>
-      <h3 class="mt-3">新着商品</h3>
+      <h3 class="mt-3">新着絵本</h3>
       <div class="d-flex justify-content-center" >
         <% @books.each do |book| %>
           <div class="mx-2 mb-4">
