--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -7,17 +7,23 @@
   		<h2>絵本の詳細</h2>
 
     		<table class='table'>
-    		  <tr>
     		    <%= image_tag @book.get_book_image(300, 250), style: "object-fit: cover; width: 450px; height: 300px;" %>
-            <td><%= @book.name %></td>
-            <td><%= @book.description %></td>
-            <td>
-              <ul>
-                <% @book.categories.each do |category| %>
-                  <li><%= category.name %></li>
-                <% end %>
-              </ul>
-            </td>
+            <tr>
+  		    <td>絵本の名前</td>
+          <td><%= @book.name %></td>
+        </tr>
+        <tr>
+          <td>あらすじ</td>
+          <td><%= simple_format(@book.description) %></td>
+        </tr>
+        <tr>
+          <td>カテゴリ</td>
+          <td>
+              <% @book.categories.each do |category| %>
+                <%= category.name %> &emsp; <!-- カテゴリ名とスペースを追加 -->
+              <% end %>
+          </td>
+        </tr>
             <td><%= render'public/favorites/favorite', book: @book %></td>
           </tr>
         </table>
