--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="row mx-auto">
       <div class="col-3">
         <%= link_to root_path do %>
-          <%= image_tag 'logo.png', style: "object-fit: cover; width: 150px; height: 80px;" %>
+          <%= image_tag 'erande_ehon_logo.png', style: "object-fit: cover; width: 150px; height: 80px;" %>
         <% end %>
       </div>
       <div class="col-3 mt-3 text-right">
@@ -15,27 +15,23 @@
         <ul class="row justify-content-end my-2 list-unstyled">
           <% if member_signed_in? %>
             <li class="nav-item mx-2 mt-2">
-              <i class="fa-regular fa-user"></i>
+              <i class="fa-solid fa-face-smile"></i>
               <%= link_to "マイページ", member_path(id: current_member.id), class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
-
             <li class="nav-item mx-2 mt-2">
-              <%= link_to '投稿フォーム', new_book_path %>
-            </li>
-
-            <li class="nav-item mx-2 mt-2">
-              <i class="fa-solid fa-cake-candles"></i>
+              <i class="fa-solid fa-book-open"></i>
               <%= link_to "絵本一覧", books_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
             <li class="nav-item mx-2 mt-2">
-              <%= link_to "ログアウト", destroy_member_session_path, method: :delete %>
+              <i class="fa-solid fa-right-from-bracket"></i>
+              <%= link_to "ログアウト", destroy_member_session_path, method: :delete, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
           <% elsif admin_signed_in? %>
 
             <li class="nav-item mx-2 mt-2">
-              <i class="fa-solid fa-cake-candles"></i>
+              <i class="fa-solid fa-book-open"></i>
               <%= link_to "絵本一覧", admin_books_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
@@ -45,7 +41,7 @@
             </li>
 
             <li class="nav-item mx-2 mt-2">
-              <i class="fa-solid fa-cookie-bite"></i>
+              <i class="fa-solid fa-tags"></i>
               <%= link_to "カテゴリ一覧", admin_categories_path, class: "text-decoration-none align-middle", style: "color: #3B240B" %>
             </li>
 
@@ -56,16 +52,18 @@
 
           <% else %>
             <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-user-plus"></i>
               <%= link_to "新規登録", new_member_registration_path %>
             </li>
 
             <li class="nav-item mx-2 mt-2">
+              <i class="fa-solid fa-right-to-bracket"></i>
               <%= link_to "ログイン", new_member_session_path %>
             </li>
             <li class="nav-item mx-2 mt-2">
               <%= link_to 'ゲストログイン', members_guest_sign_in_path, method: :post %>
             </li>
-            
+
           <% end %>
         </ul>
       <%= render 'layouts/search' %>
