--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -6,22 +6,29 @@
           <div class="row justify-content-end mb-3">
             <div class="col-2">
               <%= link_to '+', new_admin_book_path, class: "title-background btn rounded-circle border-right border-bottom shadow btn-dark" %>
+              <div class="d-flex flex-wrap">
+                <% @books.each do |book| %>
+                  <div class="mx-2 mb-4">
+                    <%= link_to admin_book_path(book.id) do %>
+                      <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
+                    <% end %>
+                    <p><%= book.name %></p>
+                    <p><%= book.description %></p>
+                  </div>
+                <% end %>
+              </div>
             </div>
           </div>
 
       </div>
-      <div class="d-flex flex-wrap">
-        <% @books.each do |book| %>
-          <div class="mx-2 mb-4">
-            <%= link_to admin_book_path(book.id) do %>
-              <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
-            <% end %>
-            <p><%= book.name %></p>
-            <p><%= book.description %></p>
-          </div>
-        <% end %>
+
+    </div>
+  </div>
+</div>
+
+        <%= paginate @books %>
+        <%=link_to "下書き一覧", confirm_admin_books_path %>
       </div>
-      <%= paginate @books %>
     </div>
   </div>
 </div>
