--- a/app/views/public/post_comments/create.js.erb
+++ b/app/views/public/post_comments/create.js.erb
@@ -1,3 +1,4 @@
-$('#post-comments').html("<%= j(render "public/post_comments/form", book: @book) %>");
+$('#comment-form').html("<%= j(render "public/post_comments/form", book: @book, post_comment: @post_comment ) %>");
+$('#comment_index').html("<%= j(render "public/post_comments/index", book: @book) %>");
 $('#comment_count').html("<%= @book.post_comments.count %>")
 $("textarea").val('');
