--- a/app/views/public/post_comments/destroy.js.erb
+++ b/app/views/public/post_comments/destroy.js.erb
@@ -1,2 +1,2 @@
-$('#post-comments').html("<%= j(render "public/post_comments/index", book: @book) %>");
+$('#comment_index').html("<%= j(render 'public/post_comments/index', book: @book) %>");
 $('#comment_count').html("<%= @book.post_comments.count %>")
