--- a/app/views/admin/books/confirm.html.erb
+++ b/app/views/admin/books/confirm.html.erb
@@ -1,6 +1,24 @@
-<% @books.each do |book| %>
-  <%=link_to admin_book_path(book.id) do %>
-    <%= book.name.truncate(25) %>
-  <% end %>
-
-<% end %>
+<div class="container p-3">
+  <div class="row">
+    <div class="col-10">
+      <div class="row">
+        <h3>下書き一覧</h3>
+          <div class="row justify-content-end mb-3">
+            <div class="col-2">
+              <div class="d-flex flex-wrap">
+                <% @books.each do |book| %>
+                <div class="mx-2 mb-4">
+                  <%=link_to admin_book_path(book.id) do %>
+                    <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
+                  <% end %>
+                  <%= book.name %> <br>
+                  <%= book.description %>
+                <% end %>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div> 
+    </div>
+  </div>
+</div>
