--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,14 +1,8 @@
-<% if controller_name != 'sessions' %>
-<div class="search_form pe-3">
-  <%= search_form_for @q, url: search_path, class:"row justify-content-end" do |f| %>
-  <div class="col-md-4 p-0">
-    <%= f.search_field :name_cont, class:"form-control" %>
-  </div>
-  <div class="col-md-1 p-0">
-    <button class="btn btn-outline-success" type="submit">
-      <i class="fa-solid fa-magnifying-glass"></i>
-    </button>
-  </div>
-  <% end %>
+<div class="search_form">
+  <%= form_with url: search_path, local: true, method: :get do |f| %>
+      <%= f.text_field :word %>
+      <%= f.select :range, options_for_select([['カテゴリ'], ['絵本']]) %>
+      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+      <%= f.submit "検索", class: "btn-sm btn-primary" %>
+    <% end %>
 </div>
-<% end %>
