--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,7 +17,7 @@
             <%= link_to book_path(book.id) do %>
               <%= image_tag book.get_book_image(240, 160), style: "object-fit: cover; width: 240px; height: 160px;" %>
             <% end %>
-              <p><%= book.name %></p>
+              <p><%= book.title %></p>
           </div>
         <% end %>
       </div>
