--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,28 +1,40 @@
-<div class="container">
-  <div class='row'>
-      <% if @result == [] %>
-        <h3 class="mt-3 text-center">検索結果がありません。</h3>
-      <% elsif @book.present? %>
-      <% search_word = @q.name_cont %>
-    <h2 class="mt-3">検索結果 "<%= search_word %>"</h2>
-    <table class="table border table-hover table-inverse">
-      <thead>
+<table class="table table-hover table-inverse">
+  <!--検索対象モデルがCategoryの時 -->
+  <% if @range == "Category" %>
+    <h2>検索ワード： "<%= @word %>"</h2>
+    <thead>
+      <tr>
+        <th>表紙</th>
+        <th>カテゴリ区分</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= image_tag book.get_book_image(240, 160), style: "object-fit: cover; width: 240px; height: 160px;" %></td>
+        <td>
+          <% @book.categories.each do |category| %>
+            <%= category.name %> &emsp; <!-- カテゴリ名とスペースを追加 -->
+          <% end %>
+        </td>
+      </tr>
+    </tbody>
+  <% else %>
+    <!--検索対象モデルがCategoryではない時(= 検索対象モデルがBookの時) -->
+    <thead>
+      <tr>
+        <th>タイトル</th>
+        <th>あらすじ</th>
+      </tr>
+    </thead>
+    <tbody>
+      <h2>Books search for "<%= @word %>"</h2>
+      <% @books.each do |book| %>
         <tr>
-          <th>表紙</th>
-          <th>絵本の名前</th>
-          <th colspan="3"></th>
+          <td><%= link_to book.title , book_path(book.id) %></td>
+          <td><%= book.item_caption %></td>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <% @book.each do |f| %>
-          <td><%= image_tag f.get_book_image(200,200), class: "image" %></td>
-          <td><%= link_to f.name, book_path(f.id) %></td>
-        </tr>
-        <% end %>
-      <% else %>
-        <h3 class="mt-3 text-center">検索結果がありません。</h3>
       <% end %>
-    </table>
-  </div>
-</div>
+    </tbody>
+  <% end %>
+</table>
