--- a/app/views/admin/books/_form.html.erb
+++ b/app/views/admin/books/_form.html.erb
@@ -8,12 +8,12 @@
       </tr>
       <tr>
         <td><%= f.label :絵本の名前 %></td>
-        <td><%= f.text_field :name, placeholder: "絵本の名前", class: "form-control" %></td>
+        <td><%= f.text_field :tilte, placeholder: "絵本の名前", class: "form-control" %></td>
         <td></td>
       </tr>
       <tr>
         <td><%= f.label :あらすじ %></td>
-        <td><%= f.text_area :description, placeholder: "ここに説明文を記述します", class: "form-control", rows: 5 %></td>
+        <td><%= f.text_area :item_caption, placeholder: "ここに説明文を記述します", class: "form-control", rows: 5 %></td>
         <td></td>
       </tr>
       <tr>
