--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,9 +1,19 @@
 <div class="container pt-5 pb-5">
   <div class="row">
     <div class="col-12 text-center">
-      <h1 style="font-size:50px">About</h1>
+      <h1 style="font-size:30px">ようこそ 「えらんで　えほん」へ</h1>
+      <br>
+      <br>
       <p style="font-size:15px;">
-        このサイトはお子様の年齢や好みにあった絵本を探すママやパパのための絵本探しのサイトです。
+        「えらんで　えほん」は<br>
+        お子様の年齢や好みにあった絵本を探す<br>
+        ママやパパのための絵本探しのサイトです。
+        <br>
+        <br>
+        <br>
+        カテゴリから選んで探したり<br>
+        他のママやパパのおすすめの本を覗いてみたり<br>
+        色々な探し方でお子様の「だいすき！」な本を探してみてください。
       </p>
 
     </div>
