--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -6,11 +6,11 @@
     	<table class='table'>
   		  <tr>
   		    <td>絵本の名前</td>
-          <td><%= @book.name %></td>
+          <td><%= @book.title %></td>
         </tr>
         <tr>
           <td>あらすじ</td>
-          <td><%= simple_format(@book.description) %></td>
+          <td><%= simple_format(@book.item_caption) %></td>
         </tr>
         <tr>
           <td>カテゴリ</td>
