--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -3,6 +3,6 @@
       <%= f.text_field :word %>
       <%= f.select :range, options_for_select([['カテゴリ'], ['絵本']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn-sm btn-primary" %>
+      <%= f.submit "検索", class: "btn-sm btn-dark" %>
     <% end %>
 </div>
