--- a/app/views/public/books/_category.html.erb
+++ b/app/views/public/books/_category.html.erb
@@ -1,16 +1,14 @@
-<div class="col-2">
-  <div class="text-center">
-    <h3 class="mt-3">
-      <p style="font-size:20px;">カテゴリ検索</p>
-    </h3>
-  </div>
-  <div class="text-center">
+<div class="category_search">
+  <table class="table table-hover">
+    <tr class="mt-3">
+      <th class="font-size:20px;">ジャンル検索</th>
+    </tr>
     <%= form_with url: category_search_path, method: :get do |f| %>
       <% @categories.each do |category| %>
-        <ul class="px-3 py-2 text-center m-0" style="list-style: none;">
-          <li class="mb-1"><strong><%= link_to category.name, category_search_path(category_id: category.id), method: :get , class: "text-reset" %></strong></li>
-        </ul>
+        <tr class="px-3 py-2 text-center m-0" style="list-style: none;">
+          <td class="mb-1"><strong><%= link_to category.name, category_search_path(category_id: category.id), method: :get , class: "text-reset" %></strong></td>
+        </tr>
       <% end %>
     <% end %>
-  </div>
+  </table>
 </div>
