--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,13 +4,15 @@
       <div class="col-10">
         <div class="main-visual-cover mx-auto">
           <div class="main-visual">
-            <h3 class=" mt-5">ようこそ、えらんで えほんへ!</h3>
-            <p>このサイトは、こどもの大好きな絵本をみつける</p>
-            <p>ママやパパのための</p>
-            <p>口コミ＆コミュニティサイトです。</p>
+            <h3 class="mt-5 ml-5">ようこそ、えらんで えほんへ!</h3>
+            <p class="mt-5 ml-5">このサイトは、こどもの大好きな絵本をみつける<br>
+            ママやパパのための<br>
+            口コミ＆コミュニティサイトです。</p>
           </div>
         </div>
-      <h3 class="mt-3">新着絵本</h3>
+        <br>
+        <br>
+      <h3 class="mt-3 ml-5">新着絵本</h3>
       <div class="d-flex justify-content-center" >
         <% @books.each do |book| %>
           <div class="mx-2 mb-4">
@@ -22,7 +24,7 @@
         <% end %>
       </div>
     <div class="row justify-content-end">
-      <i class="fa-solid fa-cake-candles mt-1"></i>
+      <i class="fa-solid fa-book mt-1 mr-1"></i>
         <%= link_to '全てのえほんを見る>', books_path, class: "text-reset" %>
     </div>
   </div>
