--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container py-5">
   <h2>絵本の詳細</h2>
     <div class="row justify-content-center">
-      <%= image_tag @book.get_book_image(300, 250) %>
+      <%= image_tag @book.image_url + "?_ex=120x120" %>
     	<table class='table'>
   		  <tr>
   		    <td>絵本の名前</td>
