--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
-<header style="background-color: #F5A9A9;">
+<header style="background-color: #FAE094;">
   <div class="container-fluid">
     <div class="row mx-auto">
       <div class="col-3">
         <%= link_to root_path do %>
-          <%= image_tag 'erande_ehon_logo.png', style: "object-fit: cover; width: 150px; height: 100px;" %>
+          <%= image_tag 'erande_ehon2.png', style: "object-fit: cover; width: 100px; height: 100px;" %>
         <% end %>
       </div>
       <div class="col-3 mt-5 text-right">
