--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -19,3 +19,9 @@
     </div>
   </div>
 </div>
+<div class="about_image-left">
+  <%= image_tag 'capyabara01.png', size: '250x250' %>
+</div>
+<div class="about_image-right">
+  <%= image_tag 'capyabara02.png', size: '250x250' %>
+</div>
