--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -32,9 +32,9 @@
               <% @favorite_books.each do |book| %>
                 <div class="mx-2 mb-4">
                   <%= link_to book_path(book.id) do %>
-                    <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
+                    <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
                   <% end %>
-                  <p><%= book.name %></p>
+                  <p><%= book.title %></p>
                 </div>
               <% end %>
             <% else %>
