--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,7 +17,7 @@
         <% @books.each do |book| %>
           <div class="mx-2 mb-4">
             <%= link_to book_path(book.id) do %>
-              <%= image_tag book.get_book_image(240, 160), style: "object-fit: cover; width: 240px; height: 160px;" %>
+              <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
             <% end %>
               <p><%= book.title %></p>
           </div>
