--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -7,10 +7,17 @@
   		  <tr>
   		    <td>絵本の名前</td>
           <td><%= @book.title %></td>
+          <td></td>
+        </tr>
+        <tr>
+  		    <td>絵本の作者</td>
+          <td><%= @book.author %></td>
+          <td></td>
         </tr>
         <tr>
           <td>あらすじ</td>
           <td><%= simple_format(@book.item_caption) %></td>
+          <td></td>
         </tr>
         <tr>
           <td>カテゴリ</td>
@@ -19,30 +26,27 @@
                 <%= category.name %> &emsp; <!-- カテゴリ名とスペースを追加 -->
               <% end %>
           </td>
+          <td></td>
         </tr>
         <tr>
           <td>コメント件数：<span id="comment_count"><%= @book.post_comments.count %></span></td>
+          <td></td>
+          <td></td>
         </tr>
-        <tr>
-          <td>
-            <div id="comment_index">
-              <table>
-                <tbody>
-                  <% @book.post_comments.each do |post_comment| %>
-                  <tr>
-                    <td><%= post_comment.member.nickname %>さんのコメント：</td>
-                    <td><%= post_comment.comment %></td>
-                    <td>
-                      <%= link_to "削除", book_post_comment_path(@book, post_comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger float-end", remote: true %>
-                    </td>
-                  </tr>
-                  <% end %>
-                </tbody>
-              </table>
-            </div>
-          </td>
-        </tr>
-      </table>
+        <div id="comment_index">
+          <% @book.post_comments.each do |post_comment| %>
+          <tr>
+            <td><%= post_comment.member.nickname %>さんのコメント：</td>
+            <td><%= post_comment.comment %></td>
+            <td>
+              <%= link_to "削除", book_post_comment_path(@book, post_comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger float-end", remote: true %>
+            </td>
+          </tr>
+          <% end %>
+        </div>
+      </td>
+    </tr>
+  </table>
 
     </div>
     <div class="row justify-content-center">
