--- a/app/views/public/books/_category.html.erb
+++ b/app/views/public/books/_category.html.erb
@@ -1,7 +1,7 @@
 <div class="category_search">
   <table class="table table-hover">
     <tr class="mt-3">
-      <th class="font-size:20px;">ジャンル検索</th>
+      <th class="font-size:20px;">カテゴリ検索</th>
     </tr>
     <%= form_with url: category_search_path, method: :get do |f| %>
       <% @categories.each do |category| %>
